--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -84,14 +84,14 @@ p{
     border-bottom-right-radius: 15px;
     border: none;
     color: white;
-    padding: 0.7rem 1rem;
-    margin: 2rem auto;
+    padding: 0.5rem 0.5rem;
+    margin: 0.5rem auto;
     text-align: left;
     text-decoration: none;
     display: block;
-    font-size: 20px;
+    font-size: 16px;
     cursor: pointer;
-    max-width: 20rem;
+    max-width: 11rem;
     font-weight: bold;
     justify-content: center;
     display: flex;
@@ -110,7 +110,7 @@ p{
         justify-content: space-between;
         width: 13%;
         height: 4%;
-        margin:0.2rem 1rem auto 1rem;
+        margin:0.2rem auto auto auto;
 
         
     }
