--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -84,19 +84,25 @@ p{
     border-bottom-right-radius: 15px;
     border: none;
     color: white;
-    padding: 0.5rem 0.5rem;
-    margin: 0.5rem auto;
-    text-align: left;
+    padding: 0.5rem;
+    
+    text-align: center;
     text-decoration: none;
     display: block;
     font-size: 16px;
     cursor: pointer;
-    max-width: 11rem;
+    max-width: 20rem;
     font-weight: bold;
     justify-content: center;
     display: flex;
-    
-    
+    @media screen and (min-width: map-get($break-point, mlg)) {
+        
+        font-size: 20px;
+    }
+    @media screen and (min-width: map-get($break-point, xxlg)) {
+        
+        
+    }
 
         &:hover{
             -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.24);
@@ -110,7 +116,7 @@ p{
         justify-content: space-between;
         width: 13%;
         height: 4%;
-        margin:0.2rem auto auto auto;
+        margin:0.2rem 1rem auto 1rem;
 
         
     }
